# bitcoin-auto-trader

./: .env  .gitignore  README.md  main.py  main_with_notifications.py  pyproject.toml  run_backtest.py  symbol_validation.py  test_binance_client.py  test_binance_connection.py  test_capital_manager.py  test_commands.py  test_database.py  test_integrated_trader.py  test_integrated_trader_db.py  test_logger.py  test_risk_manager.py  test_trader.py  tree.txt
backend/api/: binance_client.py
backend/core/: capital_manager.py  integrated_trader.py  integrated_trader_with_db.py  risk_manager.py  trader.py
backend/database/: database_manager.py  models.py
config/: database_schema.sql
src/api/: binance_client.py  slack_client.py  supabase_client.py
src/backtesting/: backtest_reporter.py  backtester.py  performance_analyzer.py
src/core/: data_collector.py  notification_manager.py  scheduler.py  slack_command_handler.py  trader.py
src/market/: market_analyzer.py  symbol_selector.py
src/strategies/: macd_atr.py
src/utils/: logger.py  slack_handler.py
tests/: test_backtesting.py  test_binance_client.py  test_data_collector.py  test_logger.py  test_notification_manager.py  test_scheduler.py  test_slack_client.py  test_slack_commands.py  test_strategy.py  test_trader.py
